--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style1.css" />
     <link rel="stylesheet" href="css/spinload.css" />
     <link
       rel="stylesheet"
       type="text/css"
       href=" https://fonts.googleapis.com/css?family=Pacifico"
     />
+    <link rel="icon" type="image/jpg" href="/img/cuteCat.jpg"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -52,7 +53,7 @@
         </button>
       </div>
     </div>
-    <audio src="./sound/sound.mp3" autoplay></audio>
+    <audio src="./sound/sound2.mp3" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -71,6 +72,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/myJs1.js"></script>
+    <script src="js/myJs2.js"></script>
   </body>
 </html>
