--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chúc mừng sinh nhật Út Hường</title>
+    <title>sinh nhật cô giáo<3 </title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -72,6 +72,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/myJs2.js"></script>
+    <script src="js/myJs3.js"></script>
   </body>
 </html>
