--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
           <div class="rect5"></div>
         </div>
       </div>
-      <div id="bg"></div>
+      <div id="bg">
+        <video autoplay muted loop id="myVideo">
+          <source src="./img/ground.mp4" type="video/mp4">
+        </video>
+      </div>
       <div class="content">
         <header>
           <h2 id="text3"> ._.</h2>
