--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
       </div>
       <div id="bg">
-        <video autoplay muted loop id="myVideo">
+        <!-- <video autoplay muted loop id="myVideo">
           <source src="./img/ground.mp4" type="video/mp4">
-        </video>
+        </video> -->
       </div>
       <div class="content">
         <header>
@@ -57,7 +57,7 @@
         </button>
       </div>
     </div>
-    <audio src="./sound/sound2.mp3" autoplay></audio>
+    <audio src="./sound/sound.mp3" autoplay></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
