--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </button>
       </div>
     </div>
-  
+    <audio id='playmucsic' src="./sound/sound.mp3" muted loop></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -76,6 +76,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="js/myJs5.js"></script>
+    <script src="js/myJs6.js"></script>
   </body>
 </html>
