--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </button>
       </div>
     </div>
-    <audio id='playmucsic' src="./sound/sound.mp3" muted loop></audio>
+    <audio id='playmucsic' src="./sound/sound.mp3" muted="true" loop></audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
